--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,34 +1,23 @@
-"adams":
-  - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+"sacramento":
+  - firstname: ["João", "Joao", "J", "J."]
+    url: http://www.joaosacramento.com
 
-"podolsky":
-  - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
+"schug":
+  - firstname: ["Simon", "S.", "S"]
+    url: https://smn.one
 
-"rosen":
-  - firstname: ["Nathan", "N."]
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
+"meulemans":
+  - firstname: ["Alexander", "A", "A."]
+    url: https://alexandermeulemans.com
 
-"bach":
-  - firstname: ["Johann Sebastian", "J. S."]
-    url: https://en.wikipedia.org/wiki/Johann_Sebastian_Bach
+"meier":
+  - firstname: ["Robert", "R", "R."]
+    url: https://as.inf.ethz.ch/people/members/romeier/index.html
 
-  - firstname: ["Carl Philipp Emanuel", "C. P. E."]
-    url: https://en.wikipedia.org/wiki/Carl_Philipp_Emanuel_Bach
+"kobayashi":
+  - firstname: ["Seijin", "S", "S."]
+    url: https://as.inf.ethz.ch/people/members/seijink/index.html
 
-"przibram":
-  - firstname: ["Karl"]
-    url: https://link.springer.com/article/10.1007/s00016-019-00242-z
-
-"schrodinger":
-  - firstname: ["Erwin"]
-    url: https://en.wikipedia.org/wiki/Erwin_Schr%C3%B6dinger
-
-"lorentz":
-  - firstname: ["Hendrik Antoon"]
-    url: https://en.wikipedia.org/wiki/Hendrik_Lorentz
-
-"planck":
-  - firstname: ["Max"]
-    url: https://en.wikipedia.org/wiki/Max_Planck
+"akram":
+  - firstname: ["Yassir", "Y", "Y."]
+    url: https://as.inf.ethz.ch/people/members/yakram/index.html
